--- a/package.json
+++ b/package.json
@@ -7,6 +7,9 @@
     "@testing-library/react": "^11.2.2",
     "@testing-library/user-event": "^12.5.0",
     "react": "^17.0.1",
+    "react-countdown": "^2.3.1",
+    "react-countdown-date": "^1.0.0",
+    "react-date-countdown-timer": "^1.0.9",
     "react-dom": "^17.0.1",
     "react-scripts": "4.0.1",
     "web-vitals": "^0.2.4"
